--- a/src/components/Register.scss
+++ b/src/components/Register.scss
@@ -1,3 +1,8 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 .form-container {
   background-color: rgb(36, 179, 227);
   height: 100vh;
@@ -12,23 +17,28 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    .logo{
+
+    .logo {
       font-weight: bold;
       font-size: 25px;
     }
-    .title{
+
+    .title {
       font-size: 12px;
     }
+
     form {
       display: flex;
       flex-direction: column;
       gap: 15px;
-      input{
+
+      input {
         padding: 15px;
-        border:none;
-        width:250px;
+        border: none;
+        width: 250px;
         border-bottom: 1px solid rgb(36, 179, 227);
       }
+
       button {
         background-color: rgb(36, 179, 227);
         color: white;
@@ -38,7 +48,8 @@
         cursor: pointer;
       }
     }
-    p{
+
+    p {
       margin-top: 10px;
       font-size: 12px;
       color: rgb(41, 38, 38);
@@ -46,3 +57,63 @@
   }
 
 }
+
+.home {
+  background-color: #a7bcff;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.container {
+  border: 1px solid white;
+  border-radius: 10px;
+  width: 65%;
+  height: 80%;
+  display: flex;
+  overflow: hidden;
+
+  .sidebar {
+    flex: 1;
+    background-color: #3e3c61;
+
+    .navbar {
+      display: flex;
+      justify-content: space-between;
+      padding: 10px;
+      background-color: #2f2d52;
+
+      .logo {
+        font-weight: bold;
+      }
+
+      .user {
+        display: flex;
+        gap: 10px;
+
+        img {
+          background-color: #ddddf7;
+          height: 24px;
+          width: 24px;
+          border-radius: 50%;
+          object-fit: cover;
+        }
+
+        button {
+          background-color: #5d5bBd;
+          color: #ddddf7;
+          font-size: 10px;
+          border: none;
+          padding: 10px;
+        }
+      }
+    }
+  }
+
+  .chat {
+    flex: 2;
+  }
+}
+
+.sidebar {}
