--- a/src/components/Style.scss
+++ b/src/components/Style.scss
@@ -112,6 +112,8 @@
           font-size: 10px;
           border: none;
           padding: 10px;
+          border-radius: 10px;
+          cursor: pointer;
         }
       }
     }
@@ -186,10 +188,112 @@
         align-items: center;
         gap: 10px;
 
-        span {
+        img {
+          width: 30px;
           cursor: pointer;
         }
       }
     }
+
+    .messages {
+      background-color: #ddddf7;
+      padding: 10px;
+      height: calc(100% - 140px);
+      overflow: scroll;
+
+      .message {
+        display: flex;
+        gap: 20px;
+        margin-bottom: 20px;
+
+        .messageInfo {
+          display: flex;
+          flex-direction: column;
+          color: grey;
+          font-weight: 300;
+
+          img {
+            object-fit: cover;
+            height: 40px;
+            width: 40px;
+            border-radius: 50%;
+          }
+        }
+
+        .messageContent {
+          max-width: 80%;
+          display: flex;
+          flex-direction: column;
+          gap: 10px;
+
+          p {
+            padding: 10px 20px;
+            background-color: white;
+            border-radius: 0px 10px 10px 10px;
+            max-width: max-content;
+          }
+
+          img {
+            width: 50%;
+          }
+        }
+
+        &.owner {
+          flex-direction: row-reverse;
+
+          .messageContent {
+            align-items: flex-end;
+
+            p {
+              background-color: #8da4f1;
+              color: white;
+              border-radius: 10px 0px 10px 10px;
+            }
+          }
+        }
+      }
+    }
+
+    .input {
+      height: 50px;
+      background-color: white;
+      padding: 10px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+
+      input {
+        width: 100%;
+        border: none;
+        outline: none;
+        color: #2f2d52;
+        font-size: 18px;
+
+        &::placeholder {
+          color: grey;
+        }
+      }
+
+      .send {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+      }
+
+      img {
+        height: 24px;
+        cursor: pointer;
+      }
+
+      button {
+        border: none;
+        padding: 10px 15px;
+        color: white;
+        background-color: #5d5bBd;
+        cursor: pointer;
+        border-radius: 10px;
+      }
+    }
+
   }
 }
