fix for input text2

--- a/src/components/Style.scss
+++ b/src/components/Style.scss
@@ -105,6 +105,7 @@
         span {
           padding: 2px;
           color: #ffff;
+          text-transform: capitalize;
         }
 
         button {
