--- a/src/components/Style.scss
+++ b/src/components/Style.scss
@@ -81,10 +81,10 @@
   .sidebar {
     flex: 1;
     background-color: #3e3c61;
-  //  width:100px;
-    @media screen and (max-width: 400px) {
-      width: 300px;
-    }
+  // //  width:100px;
+  //   @media screen and (max-width: 400px) {
+  //     width: 300px;
+  //   }
 
     .navbar {
       display: flex;
